# pwc-task1

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
load_tests/: README.md  locustfile.py  requirements.txt  stress_test.py
scripts/: run_tests.sh
src/python/libs/pwc/: __init__.py  api_interface.py  logger.py  requirements.txt  settings.py  task_interface.py
src/python/libs/pwc/ai/: __init__.py  base.py  factory.py  openai_client.py
src/python/libs/pwc/api_interface/: client.py
src/python/libs/pwc/factories/: __init__.py  analyze_factory.py  evaluate_factory.py  parse_factory.py
src/python/libs/pwc/storage/: __init__.py  base.py  factory.py  local.py
src/python/libs/pwc/task_interface/: __init__.py  base.py  schema.py
src/python/libs/pwc/workflows/: __init__.py  analyze_contract.py
src/python/projects/analyze_contracts/: Dockerfile  Makefile  requirements.txt
src/python/projects/analyze_contracts/analyze_contracts/: __init__.py  main.py  task_registry.py
src/python/projects/api/: .gitignore  Dockerfile  Makefile  pytest.ini  requirements-test.txt  requirements.txt
src/python/projects/api/api/: __init__.py  main.py
src/python/projects/api/tests/: conftest.py  test_auth.py  test_contracts.py  test_genai.py  test_health.py  test_load_basic.py  test_simple.py
src/python/projects/frontend/: Dockerfile  Makefile  config.py  main.py  requirements.txt
src/python/projects/frontend/pages/: 1_🔐_Login.py  2_📝_Register.py  3_📋_Contracts.py  4_🤖_GenAI_Analysis.py  5_📊_Admin_Dashboard.py
(+34 files in other folders)
